adding of default connection string from azure

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=murat\\SQLEXPRESS;Initial Catalog=UserDB2;Integrated Security=True;TrustServerCertificate=true;"
+    //"DefaultConnection": "Data Source=murat\\SQLEXPRESS;Initial Catalog=UserDB2;Integrated Security=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=tcp:tasktestdb.database.windows.net,1433;Initial Catalog=Task4DB;Persist Security Info=False;User ID=murat;Password=Kokshe2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
